Mon Jan 17 04:24:49 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>

        * MDE/GME/paradigms/CUTS/interpreters/UNITE/UNITE_Impl.h:
        * MDE/GME/paradigms/CUTS/interpreters/UNITE/UNITE_Impl.cpp:

          Updated to latest version of GAME.

Mon Jan 17 04:19:59 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>

        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/arch/ccm/rtidds/Context_Generator.cpp:

          Fixed build error.

Mon Jan 17 03:59:42 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>

        * MDE/GME/plugins/cute/CUTE_Impl.h:
        * MDE/GME/plugins/cute/CUTE_Impl.cpp:
        * MDE/GME/plugins/cute/Model_Interpreter.cpp:
        * MDE/GME/plugins/cute/Model_Interpreter_Action.cpp:
        * MDE/GME/plugins/cute/Property_Locator.h:
        * MDE/GME/plugins/cute/Property_Locator.cpp:

          Updated to latest version of GAME.

Mon Jan 17 03:13:17 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>

        * MDE/GME/paradigms/PICML/interpreter/quotas/specification/Quotas_Specification_Impl.h:
        * MDE/GME/paradigms/PICML/interpreter/quotas/specification/Quotas_Specification_Impl.cpp:

          Updated to latest version of GAME.

Sun Jan 16 21:47:50 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>

        * examples/arch/HelloWorld/arch/ciao/HelloWorld.mpc:
        * examples/arch/HelloWorld/arch/ciao/HelloWorldE.idl:
        * examples/arch/HelloWorld/arch/ciao/HelloWorldImpl.cpp:
        * examples/arch/HelloWorld/arch/opensplice/HelloWorld.mpc:
        * examples/arch/HelloWorld/arch/opensplice/HelloWorld_OSPL.idl:
        * examples/arch/HelloWorld/arch/rtidds/HelloWorld.mpc:
        * examples/arch/HelloWorld/arch/rtidds/HelloWorldImpl.h:
        * examples/arch/HelloWorld/arch/rtidds/HelloWorld_NDDS.idl:
        * examples/arch/HelloWorld/arch/tcpip/HelloWorld.mpc:

          Re-generated examples using last implementation.
